--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {  }
 }
 
 h1,h2{
- color = "#ffffff";
- font-family: 'Montserrat', sans-serif;   
- text-transform: uppercase; 
- 
+ color: #ffffff;
+ font-family: 'Montserrat', sans-serif;
+ text-transform: uppercase;
+
 }
 
 h3, h4, h5, h6 
@@ -38,5 +38,5 @@ section#title img {
 
 .social li {
   display: inline;
-  padding: 20px
+  padding: 20px;
 }
